syntax = "proto3";



service GetNewsService {
    rpc getAllGameNews(RequestNumber) returns (GetAllGameNewsResponse) {};
    rpc getGameNewsRecent(empty) returns (NewGameResponse) {};
    rpc getTechnologyNews(RequestNumber) returns (NewTechnologyResponse) {};
};

message empty {}



message RequestNumber {
    int32 requestsNumber = 1;
};


message NewGameResponse { 
    string title = 1;
    repeated string paragraphs = 2;
};


message GetAllGameNewsResponse {
    repeated NewGameResponse allNews = 1;
};



message NewTechnology { 
    string title = 1;
    string paragraph = 2;
};

message NewTechnologyResponse {
    repeated NewTechnology newTechnology = 1;
}